chore(cms): fix z-index

--- a/client/projects/cms/src/scss/02-components/_tables.scss
+++ b/client/projects/cms/src/scss/02-components/_tables.scss
@@ -16,7 +16,7 @@
 
       &::after {
         content: '';
-        z-index: 102;
+        z-index: 99;
         position: absolute;
         left: 0;
         width: 100%;
